sc/qa/unit/ucalc_copypaste.cxx
@@ -9407,10 +9407,11 @@ CPPUNIT_TEST_FIXTURE(TestCopyPaste, testCopyPasteSkipEmpty)
 
     // Check the content after the paste.
     {
+        // tdf#141440 - do not delete notes when pasting contents
         static const Check aChecks[] = {
-            { "Clip1", COL_YELLOW, false }, { "B", COL_BLUE, true },
-            { "Clip2", COL_YELLOW, false }, { "D", COL_BLUE, true },
-            { "Clip3", COL_YELLOW, false },
+            { "Clip1", COL_YELLOW, true }, { "B", COL_BLUE, true },
+            { "Clip2", COL_YELLOW, true }, { "D", COL_BLUE, true },
+            { "Clip3", COL_YELLOW, true },
         };
 
         bool bRes
@@ -9434,10 +9435,11 @@ CPPUNIT_TEST_FIXTURE(TestCopyPaste, testCopyPasteSkipEmpty)
     // Redo, and check the content again.
     aUndo.Redo();
     {
+        // tdf#141440 - do not delete notes when pasting contents
         static const Check aChecks[] = {
-            { "Clip1", COL_YELLOW, false }, { "B", COL_BLUE, true },
-            { "Clip2", COL_YELLOW, false }, { "D", COL_BLUE, true },
-            { "Clip3", COL_YELLOW, false },
+            { "Clip1", COL_YELLOW, true }, { "B", COL_BLUE, true },
+            { "Clip2", COL_YELLOW, true }, { "D", COL_BLUE, true },
+            { "Clip3", COL_YELLOW, true },
         };
 
         bool bRes
