sc/qa/unit/uicalc/uicalc.cxx
@@ -1893,6 +1893,41 @@ CPPUNIT_TEST_FIXTURE(ScUiCalcTest, testTdf150219)
     CPPUNIT_ASSERT_EQUAL(OUString(""), pDoc->GetString(ScAddress(0, 0, 1)));
 }
 
+CPPUNIT_TEST_FIXTURE(ScUiCalcTest, testTdf141440)
+{
+    createScDoc();
+    ScDocument* pDoc = getScDoc();
+
+    // Insert a note to cell A1
+    goToCell("A1");
+    uno::Sequence<beans::PropertyValue> aArgs
+        = comphelper::InitPropertySequence({ { "Text", uno::Any(OUString("Note in A1")) } });
+    dispatchCommand(mxComponent, ".uno:InsertAnnotation", aArgs);
+
+    // Insert a formula to cell A2
+    insertStringToCell("A2", u"=1+1");
+    CPPUNIT_ASSERT_EQUAL(OUString("2"), pDoc->GetString(ScAddress(0, 1, 0)));
+
+    // Copy content of A2 to A1 using paste special command as a formula (Flags F)
+    goToCell("A2");
+    dispatchCommand(mxComponent, ".uno:Copy", {});
+    goToCell("A1");
+    aArgs = comphelper::InitPropertySequence(
+        { { "Flags", uno::Any(OUString("F")) },
+          { "FormulaCommand", uno::Any(sal_uInt16(ScPasteFunc::ADD)) },
+          { "SkipEmptyCells", uno::Any(false) },
+          { "Transpose", uno::Any(false) },
+          { "AsLink", uno::Any(false) },
+          { "MoveMode", uno::Any(sal_uInt16(InsCellCmd::INS_NONE)) } });
+    dispatchCommand(mxComponent, ".uno:InsertContents", aArgs);
+
+    // Check if string in cell A2 was copied to cell A1
+    CPPUNIT_ASSERT_EQUAL(OUString("2"), pDoc->GetString(ScAddress(0, 0, 0)));
+    // Without the fix in place, there would be no note in cell A1 after using paste special
+    CPPUNIT_ASSERT_MESSAGE("There should be a note on A1", pDoc->HasNote(ScAddress(0, 0, 0)));
+    CPPUNIT_ASSERT_EQUAL(OUString("Note in A1"), pDoc->GetNote(ScAddress(0, 0, 0))->GetText());
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
